Fix HTML encoding issues in index.html

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -66,7 +66,7 @@
             </ul>
         </section>
 
-        <section class="section" id="projects">
+        <!-- <section class="section" id="projects">
             <h2>Projects</h2>
             <ul>
                 <li>
@@ -78,7 +78,7 @@
                     <p>It is a Windows Password Cracker wiith minimal user interaction and fully scripted to Unlock Window.</p>
                 </li>
             </ul>
-        </section>
+        </section> -->
 
         <section class="section" id="research">
             <h2>Research and Publications</h2>
@@ -175,3 +175,4 @@
 </body>
 
 </html>
+
