Revise portfolio information and layout
Updated the portfolio HTML file with new content and structure.

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="discription" content="Ratnesh Raj Dwivedi is a Cybersecurity Student & Forensic Researcher focused on Penetration Testing & Security Research">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; style-src 'self' 'unsafe-inline'; script-src 'self'; object-src 'none'">
-    <title>Portfolio</title>
+    <title>Ratnesh Raj Dwivedi - Cybersecurity, Forensic Researcher & Student</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -14,6 +14,7 @@
   <canvas id="matrix-canvas" aria-hidden="true"></canvas>
     <header>
         <h1>RATNESH DWIVEDI</h1>
+        <h2>Cybersecurity, Digital Forensics, Researcher & Student</h2>
         <div class="contact">
             <a href="mailto:ratneshd202@gmail.com">Email</a> |
             <a href="https://www.linkedin.com/in/ratnesh-raj-dwivedi" target="_blank">LinkedIn</a> |
@@ -29,8 +30,8 @@
 
     <div class="container">
         <section class="section" id="about">
-            <h2>About Me</h2>
-            <p>I am a dedicated and enthusiastic cybersecurity student with a strong foundation in network security, ethical hacking, and incident response. My goal is to apply my knowledge and skills in a challenging cybersecurity role where I can contribute to protecting digital assets and improving security protocols.</p>
+            <!-- <h2>Cybersecurity, Digital Forensics, Researcher & Student</h2> -->
+            <!-- <p>I'm a dedicated and enthusiastic cybersecurity student with a strong foundation in network security, ethical hacking, and incident response. My goal is to apply my knowledge and skills in a challenging cybersecurity role where I can contribute to protecting digital assets and improving security protocols.</p> -->
         </section>
 
         <section class="section" id="education">
