Fix HTML structure and add JSON-LD script

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -7,6 +7,16 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; style-src 'self' 'unsafe-inline'; script-src 'self'; object-src 'none'">
     <title>Ratnesh Raj Dwivedi - Cybersecurity, Forensic Researcher & Student</title>
     <link rel="stylesheet" href="style.css">
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "Person","name": "Ratnesh Raj Dwivedi",
+          "url": "https://ratnesh1dwivedi.github.io",
+          "sameAs": ["https://www.linkedin.com/in/ratnesh-raj-dwivedi","https://github.com/ratnesh1dwivedi"],
+          "jobTitle": "Cybersecurity & Digital Forensics",
+          "affiliation": {"@type": "Organization","name": "UPES University"}
+         }
+        </script>
 </head>
 
 <body>
@@ -176,4 +186,5 @@
 </body>
 
 </html>
+
 
