Fix HTML structure and improve formatting

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -39,10 +39,10 @@
     </header>
 
     <div class="container">
-        <section class="section" id="about">
+        <!-- <section class="section" id="about">
             <!-- <h2>Cybersecurity, Digital Forensics, Researcher & Student</h2> -->
             <!-- <p>I'm a dedicated and enthusiastic cybersecurity student with a strong foundation in network security, ethical hacking, and incident response. My goal is to apply my knowledge and skills in a challenging cybersecurity role where I can contribute to protecting digital assets and improving security protocols.</p> -->
-        </section>
+        <!-- </section> -->
 
         <section class="section" id="education">
             <h2>Education</h2>
@@ -186,5 +186,6 @@
 </body>
 
 </html>
+
 
 
